Varia, Maywood: Fix FSE Navigation Menu width when alignwide or alignfull (#1654)
Fix a regression on Maywood, that caused `alignwide` and `alignfull` Navigation Menu blocks not having the expected width.

--- a/maywood/style-editor.css
+++ b/maywood/style-editor.css
@@ -1344,6 +1344,10 @@ b, strong {
  */
 }
 
+.fse-template-part .main-navigation .alignwide, .fse-template-part .main-navigation .alignfull {
+	width: 100%;
+}
+
 .fse-template-part .main-navigation .button {
 	line-height: 1;
 	color: white;
