--- a/maywood/style.css
+++ b/maywood/style.css
@@ -4068,6 +4068,10 @@ p:not(.site-title) a:hover {
 	margin-top: 0;
 }
 
+.fse-template-part .main-navigation .alignwide, .fse-template-part .main-navigation .alignfull {
+	width: 100%;
+}
+
 .fse-template-part .main-navigation .has-text-color > .main-menu.footer-menu > li > a {
 	color: inherit;
 }
