--- a/varia/style-editor.css
+++ b/varia/style-editor.css
@@ -1278,6 +1278,10 @@ table th,
  */
 }
 
+.fse-template-part .main-navigation .alignwide, .fse-template-part .main-navigation .alignfull {
+	width: 100%;
+}
+
 .fse-template-part .main-navigation .button {
 	line-height: 1;
 	color: white;
